[package]
name = "part2-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
deadpool = { version = "0.13.0", features = ["rt_tokio_1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
